Finished the desktop part

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "astro": "^5.17.1",
+    "bootstrap": "^5.3.3",
+    "sass": "^1.97.3"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.97.3"
   }
 }
